--- a/src/componentesStyle/createTorneo.css
+++ b/src/componentesStyle/createTorneo.css
@@ -1,13 +1,13 @@
 #contenedor-torneo{
     display: flex;
-    width: 300px;
-    height: 300px;
-    flex-direction: column;
-    justify-content: center;
+    width: 400px;
+    height: 200px;
+    flex-direction: row;
+    justify-content: space-around;
     align-items: center;
-    
-    border: 2px solid #000000;
     border-radius: 20px;
+    background-color: #80aded;
+    box-shadow: 0px 0px 7px rgba(0, 0, 0, 0.5);
 }
 .contenedor-title-text{
     width: 100%;
@@ -15,10 +15,10 @@
     
 }
 .title-nombre{
-    width: 50%;
+    width: 100%;
 }
 .title-fecha{
-    width: 50%;
+    width: 100%;
 }
 #imagen-banner{
     border-radius: 20px;
@@ -29,4 +29,39 @@
     flex-direction: row;
     justify-content: space-evenly;
     align-items: center;
+}
+#contenedor-torneo-image{
+    display: flex;
+}
+#contenedor-torneo-detalle{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.boton-admin{
+    border: 2px solid #000000;
+      padding-right: 5px;
+      padding-left: 5px;
+      padding-top: 5px;
+      padding-bottom: 5px;
+      border-radius: 5px;
+      
+      cursor: pointer;
+   }
+.boton-admin:hover {
+    background-color: #b9b9b9;
+}
+.boton-adminE{
+    border: 2px solid #000000;
+      padding-right: 5px;
+      padding-left: 5px;
+      padding-top: 5px;
+      padding-bottom: 5px;
+      border-radius: 5px;
+      background-color: #ff3d3d;
+      cursor: pointer;
+   }
+.boton-adminE:hover {
+    background-color: #cd6969;
 }
