--- a/src/componentesStyle/menu.css
+++ b/src/componentesStyle/menu.css
@@ -8,13 +8,23 @@
     background-color: #2c2c2c;
 }
 #contenedor-title-text{
-    width: 75%;
+    width: 80%;
     display: flex;
     flex-direction: row;
-    justify-content: start;
+    justify-content: space-between;
+    align-items: center;
     
 }
 #title-text{
     display: flex;
     flex-direction: row;
 }
+#log-out-menu{
+    border: 1px solid #9e9e9e;
+    padding: 5px;
+    border-radius: 5px;
+    cursor: pointer;
+}
+#log-out-menu:hover {
+    background-color: #9f9f9f;
+  }
