--- a/src/componentesStyle/paginas.css
+++ b/src/componentesStyle/paginas.css
@@ -70,7 +70,7 @@
     padding-top: 60px;
     display: flex;
     justify-content: center;
-    
+    background-color: #afccee;
   }
  #pagina-contenido-contenedor-admin{
 
@@ -174,6 +174,8 @@
     align-items: start;
     gap: 15px;
   }
+  /*------------------------------------------Formulario--------------------------------------------*/
+  
   .modal-overlay {
     position: fixed;
     top: 0;
@@ -185,9 +187,52 @@
     justify-content: center;
     align-items: center;
   }
-  
+  #form-content-torneo{
+    display: flex;
+    flex-direction: column;
+    height: 225px;
+    justify-content: space-around;
+    align-items: center;
+  }
   .modal {
-    background-color: white;
+    background-color: #9ec6ff;
     padding: 20px;
     border-radius: 8px;
+    height: 300px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
   }
+  #boton-form-content-cerrar{
+    border: 2px solid #000000;
+    padding-right: 5px;
+    padding-left: 5px;
+    border-radius: 5px;
+    background-color: #ff5f5f;
+    cursor: pointer;
+  }
+  #boton-form-content-cerrar:hover{
+    background-color: hsl(0, 100%, 83%);
+  }
+  #boton-form-content-guardar{
+    border: 2px solid #000000;
+    padding-right: 5px;
+    padding-left: 5px;
+    border-radius: 5px;
+    background-color: #86afff;
+    cursor: pointer;
+  }
+  #boton-form-content-guardar:hover{
+    background-color: #a7c5ff;
+  }
+  #nombreInput,
+  #fechaLimiteInput,
+  #cantidadMaxInput {
+  border: 1px solid #b4d3ff; /* Borde */
+  border-radius: 3px; /* Bordes redondeados */
+  font-size: 15px; /* Tamaño de la fuente */
+  background-color: #cce1ff;
+  padding: 3px;
+  }
+  /*********************************************Formulario*********************************************/
