--- a/src/componentesStyle/paginas.css
+++ b/src/componentesStyle/paginas.css
@@ -236,3 +236,19 @@
   padding: 3px;
   }
   /*********************************************Formulario*********************************************/
+  #botones-principales{
+    background-color: #ffffff;
+    border-radius: 3px;
+    border: 1px solid #000000; /* Borde */
+
+    cursor: pointer;
+  }
+  #botones-principales:hover{
+    cursor: pointer;
+  }
+  #pooint{
+    cursor: pointer;
+  }
+  #pooint2{
+    cursor: pointer;
+  }
